@@ -3,8 +3,7 @@
 # For this first GnuTLS test, we do not obey "gnutls", so that Exim has to
 # create the GnuTLS paramter data for itself.
 #
-echo ==> Creating GnuTLS parameter data ... may take some time ... 
-echo ==> Moving the mouse about may help ...
+echo ==> Creating GnuTLS parameter data ...
 exim -DSERVER=server -bd -oX PORT_D
 ****
 exim CALLER@test.ex
